# ishihara

./: .gitignore  Cargo.toml  LICENSE  package-lock.json  wrangler.toml
.github/: deploy.yaml
src/: image_gen.rs  index.html  lib.rs
