[package]
name = "cbencryption"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.3.0", features = ['http', 'axum'] }
image = "0.25.1"
imageproc = "0.25.0"
ab_glyph = "=0.2.26"
rand = "0.8.5"
tracing = "0.1"
tracing-web = "0.1"
tracing-subscriber = { version = "0.3", features = ['time', 'json'] }
time = { version = "0.3", features = ['wasm-bindgen'] }
serde = "1.0.204"
serde_json = "1.0.117"
axum = { version = "0.7", default-features = false, features = ["json"]}
tower-service = "0.3.2"


[profile.release]
opt-level = "s"   # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
